  4. Combining BRIEF and COMPRESS now results in SUPERBRIEF!
  5. Added new GMODIFY fields: RESOURCE (string substitute for MATERIAL), and MATERIALTYPE
  6. New standard races: Pegasus, Pegacorn
  7. Improvements to glassblowing and boatwright recipes.
  8. Journal messages can now be forwarded to the senders game mailbox, even if smtp server isn't running.
  9. Can now use CREATE A CAT to quickly generate a GenMOB of a particular race.
  10. Items in npc mob inventory can now be set to populate only at boot time.
  11. Private property left untampered for mud-months will get increasingly "Dusty". Use CLEAN.
  12. Channel backlogs can now be managed from the Journal Browser in the MUDGrinder
  13. New Achievement Award: NOPURGE -- for protecting players from auto-purge.
  14. New Spell: Prestidigitation
  15. New parameter to the Prop_*SpellCast properties for setting ticks on some spells only.
  16. Material type for Precious Stones (Diamonds, Gems, etc) given new friendly name of "Gemstone"
  17. <VARIES> tags in room descriptions now includes a Zappermask option -- see the Archon's Guide.
  18. Journal entries, including those with embedded replies, can be edited from the MUDGrinder.
  19. MUDGRinder: Mobs can now be added and edited directly in ShopKeeper inventory
  20. Clans can restrict their lower ranks from certain rooms with clan ward and improved clan ward spells.
  21. Version command now shows system up time, and scheduled shutdown time.
  22. New DISABLE flag: languages
  23. Clans hostile to each other can attack each others controlled areas.
  24. Clans friendly/ally with each other gain certain home privileges in each others clan halls.
  25. Faithhelper, Racehelper, Alignhelper, and Playerhelper all now support max combatants argument.
  26. Eight new Clan Trophies added, including several Monthly awards. Check the INI file changes!
  27. Clans with no activity in the previous month will go into an informative Stagnant/Inactive status.