@@ -1823,6 +1823,15 @@ Parameters : \n\r\
 Description: \n\r\
 Makes an item explode when scrapped.
 
+PROP_SHORTEFFECTS=\
+Property   : Prop_ShortEffects\n\r\
+Targets    : MOB\n\r\
+Parameters : ([MAX TICKS];)([ABILITY MASK])
+Example    : 3;+SKILLFLAG -DANCING -SINGING -PLAYING\n\r\
+Description: \n\r\
+Makes the mob with this property more resiliant against effects by \
+limiting their tick-down time.  Useful for bosses and elite mobs.
+
 PROP_SMELL=\
 Property   : Prop_Smell\n\r\
 Targets    : MOBS, Items, Rooms\n\r\
